# Xarvis

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.txt  FindQt5.cmake  InstallDependentSharedObjects.cmake.in  JarvisAPI.cmake  JarvisIDEBranding.cmake  JarvisTranslations.cmake  QtDir.cmake
share/: CMakeLists.txt
share/jarvis/: CMakeLists.txt
share/jarvis/para/: config.toml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/app2/: CMakeLists.txt  main.cpp
src/examples/: CMakeLists.txt
src/examples/app/: CMakeLists.txt  form.cpp  form.ui  main.cpp
src/examples/app2/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/tools/: CMakeLists.txt
src/tools/qtcreatorcrashhandler/: crashhandlerdialog.cpp  crashhandlersetup.cpp
